@@ -64,7 +64,7 @@ $Date$
 <!ENTITY lfs-vim-version              "7.3">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20120814">
+<!ENTITY blfs-bootscripts-version     "20120825">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.&lfs-domainname;/blfs/wiki">
@@ -644,7 +644,6 @@ $Date$
 <!ENTITY proftpd-version              "1.3.4a">
 <!-- samba3 (chapter 14) -->
 <!ENTITY vsftpd-version               "3.0.0">
-<!-- <!ENTITY xinetd-version               "2.3.14"> -->
 
 <!-- Chapter 21 -->
 <!ENTITY exim-version                 "4.77">
@@ -666,6 +665,7 @@ $Date$
 <!ENTITY openldap-version             "2.4.32">
 <!ENTITY virtuoso-version             "6.1.5">
 <!ENTITY soprano-version              "2.8.0">
+<!ENTITY xinetd-version               "2.3.15"> 
 
 <!-- removed 
 <!ENTITY leafnode-version             "1.11.5"> 
