@@ -25,5 +25,6 @@ $Date$
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="openldap.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="virtuoso.xml"/>
   <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="soprano.xml"/>
+  <xi:include xmlns:xi="http://www.w3.org/2001/XInclude" href="xinetd.xml"/>
 
 </chapter>
